--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4208,5 +4208,14 @@
     "CL_DV_OV_power_600_desc": "Κατάλληλο για λιώσιμο σοκολάτας, μαγείρεμα ψαριών και θαλασσινών, μαγείρεμα αποξηραμένων φασολιών σε χαμηλή φωτιά. Ζέσταμα και μαγείρεμα ευαίσθητων πιάτων με βάση τα αυγά.",
     "CL_DV_OV_power_750_desc": "Χρησιμοποιείται για το μαγείρεμα φρέσκων ή κατεψυγμένων λαχανικών.",
     "CL_DV_OV_power_1000_desc": "Ιδανικό για γρήγορο ζέσταμα ποτών, νερού και πιάτων που περιέχουν μεγάλο όγκο υγρών ή μαγειρικών πιάτων με υψηλή περιεκτικότητα σε νερό (σούπες, σάλτσες κ.λπ.).",
-    "CL_DV_OV_microwave_power_levels": "ΕΠΙΠΕΔΑ ΙΣΧΥΟΣ ΜΙΚΡΟΚΥΜΑΤΩΝ"
+    "CL_DV_OV_microwave_power_levels": "ΕΠΙΠΕΔΑ ΙΣΧΥΟΣ ΜΙΚΡΟΚΥΜΑΤΩΝ",
+    "CL_DV_OV_add_steam": "Προσθέστε ατμό",
+    "CL_DV_OV_add_steam_desc": "Ρυθμίστε πότε πρέπει να προστεθεί ατμός. Μπορείτε να προσθέσετε έως και 3 προγραμματισμένους κύκλους ατμού.",
+    "CL_DV_OV_24_summer_winter_time_automatic": "Θερινή - Χειμερινή ώρα Αυτόματη",
+    "CL_DV_OV_start_cycle_at": "Έναρξη κύκλου στις",
+    "CL_DV_OV_cycle": "κύκλος",
+    "CL_CF_RM_asko_pro_floor": "ASKO Pro",
+    "CL_DV_OV_24_notification_sounds": "Ήχοι ειδοποίησης",
+    "CL_DV_OV_24_navigation_sounds": "Ήχοι πλοήγησης",
+    "CL_DV_OV_24_on_during_use": "Αναμμένο κατά τη χρήση"
 }
