--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -4208,5 +4208,14 @@
     "CL_DV_OV_power_600_desc": "مناسب برای آب کردن شکلات، پخت ماهی و غذاهای دریایی، پختن لوبیا خشک با حرارت کم. گرم کردن مجدد و پختن غذاهای ظریف بر پایه تخم مرغ.",
     "CL_DV_OV_power_750_desc": "برای پختن سبزیجات تازه یا منجمد استفاده کنید.",
     "CL_DV_OV_power_1000_desc": "برای گرم کردن سریع نوشیدنی ها، آب و ظروف حاوی حجم زیادی مایع یا پخت و پز غذاهای با محتوای آب بالا (سوپ ها، سس ها و غیره) بهترین گزینه است.",
-    "CL_DV_OV_microwave_power_levels": "سطوح قدرت مایکروویو"
+    "CL_DV_OV_microwave_power_levels": "سطوح قدرت مایکروویو",
+    "CL_DV_OV_add_steam": "بخار را اضافه کنید",
+    "CL_DV_OV_add_steam_desc": "زمان اضافه شدن بخار را تنظیم کنید. می توانید تا 3 چرخه بخار برنامه ریزی شده اضافه کنید.",
+    "CL_DV_OV_24_summer_winter_time_automatic": "تابستان - زمستان زمان خودکار",
+    "CL_DV_OV_start_cycle_at": "شروع چرخه در",
+    "CL_DV_OV_cycle": "چرخه",
+    "CL_CF_RM_asko_pro_floor": "ASKO Pro",
+    "CL_DV_OV_24_notification_sounds": "صداهای اعلان",
+    "CL_DV_OV_24_navigation_sounds": "صداهای ناوبری",
+    "CL_DV_OV_24_on_during_use": "در حین استفاده روشن است"
 }
