--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4208,5 +4208,14 @@
     "CL_DV_OV_power_600_desc": "Шоколадты ерітуге, балық пен теңіз өнімдерін пісіруге, кептірілген бұршақтарды төмен температурада пісіруге жарайды. Жұмыртқа негізіндегі нәзік тағамдарды қыздыру және пісіру.",
     "CL_DV_OV_power_750_desc": "Жаңа піскен немесе мұздатылған көкөністерді пісіру үшін пайдаланыңыз.",
     "CL_DV_OV_power_1000_desc": "Сусындарды, суды және сұйықтықтың үлкен көлемі бар ыдыстарды жылдам қыздыруға немесе құрамында суы жоғары ыдыстарды (сорпалар, соустар, т.б.) пісіруге арналған.",
-    "CL_DV_OV_microwave_power_levels": "МИКРОТОЛҚЫНДЫҚ ҚУАТ ДЕҢГЕЙЛЕРІ"
+    "CL_DV_OV_microwave_power_levels": "МИКРОТОЛҚЫНДЫҚ ҚУАТ ДЕҢГЕЙЛЕРІ",
+    "CL_DV_OV_add_steam": "Бу қосыңыз",
+    "CL_DV_OV_add_steam_desc": "Бу қосу керек уақытты орнатыңыз. Жоспарланған 3 бу цикліне дейін қосуға болады.",
+    "CL_DV_OV_24_summer_winter_time_automatic": "Жазғы-қысқы уақыты Автоматты",
+    "CL_DV_OV_start_cycle_at": "Циклды бастаңыз",
+    "CL_DV_OV_cycle": "цикл",
+    "CL_CF_RM_asko_pro_floor": "ASKO Pro",
+    "CL_DV_OV_24_notification_sounds": "Хабарландыру дыбыстары",
+    "CL_DV_OV_24_navigation_sounds": "Навигация дыбыстары",
+    "CL_DV_OV_24_on_during_use": "Қолдану кезінде қосулы"
 }
