--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4208,5 +4208,14 @@
     "CL_DV_OV_power_600_desc": "Подходит для плавления шоколада, приготовления рыбы и морепродуктов, варки сушеных бобов на медленном огне. Разогрева и приготовления нежных блюд на основе яиц.",
     "CL_DV_OV_power_750_desc": "Используйте для приготовления свежих или замороженных овощей.",
     "CL_DV_OV_power_1000_desc": "Идеально подходит для быстрого разогрева напитков, воды и блюд, содержащих большой объем жидкости, а также для приготовления блюд с высоким содержанием воды (супов, соусов и т. д.).",
-    "CL_DV_OV_microwave_power_levels": "УРОВНИ МОЩНОСТИ МИКРОВОЛНОВОЙ ПЕЧИ"
+    "CL_DV_OV_microwave_power_levels": "УРОВНИ МОЩНОСТИ МИКРОВОЛНОВОЙ ПЕЧИ",
+    "CL_DV_OV_add_steam": "Добавить пар",
+    "CL_DV_OV_add_steam_desc": "Установите, когда следует добавлять пар. Вы можете добавить до 3 запланированных циклов подачи пара.",
+    "CL_DV_OV_24_summer_winter_time_automatic": "Летнее - Зимнее время Автоматический",
+    "CL_DV_OV_start_cycle_at": "Начать цикл в",
+    "CL_DV_OV_cycle": "цикл",
+    "CL_CF_RM_asko_pro_floor": "АСКО Про",
+    "CL_DV_OV_24_notification_sounds": "Звуки уведомлений",
+    "CL_DV_OV_24_navigation_sounds": "Звуки навигации",
+    "CL_DV_OV_24_on_during_use": "Включено во время использования"
 }
