--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -4208,5 +4208,14 @@
     "CL_DV_OV_power_600_desc": "Підходить для розтоплення шоколаду, приготування риби та морепродуктів, варіння сушених бобів на слабкому вогні. Розігрівання та приготування ніжних страв на основі яєць.",
     "CL_DV_OV_power_750_desc": "Використовуйте для приготування свіжих або заморожених овочів.",
     "CL_DV_OV_power_1000_desc": "Найкраще підходить для швидкого розігріву напоїв, води та страв, що містять велику кількість рідини, або приготування страв із високим вмістом води (супи, соуси тощо).",
-    "CL_DV_OV_microwave_power_levels": "РІВНІ МІКРОХВИЛЬОВОЇ ПОТУЖНОСТІ"
+    "CL_DV_OV_microwave_power_levels": "РІВНІ МІКРОХВИЛЬОВОЇ ПОТУЖНОСТІ",
+    "CL_DV_OV_add_steam": "Додайте пару",
+    "CL_DV_OV_add_steam_desc": "Встановіть час додавання пари. Ви можете додати до 3 запланованих парових циклів.",
+    "CL_DV_OV_24_summer_winter_time_automatic": "Літньо-зимовий час Автоматичний",
+    "CL_DV_OV_start_cycle_at": "Почати цикл о",
+    "CL_DV_OV_cycle": "цикл",
+    "CL_CF_RM_asko_pro_floor": "ASKO Pro",
+    "CL_DV_OV_24_notification_sounds": "Звуки сповіщень",
+    "CL_DV_OV_24_navigation_sounds": "Звуки навігації",
+    "CL_DV_OV_24_on_during_use": "Увімкнено під час використання"
 }
