--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -4208,5 +4208,14 @@
     "CL_DV_OV_power_600_desc": "مناسب لتذويب الشوكولاتة، وطهي الأسماك والمأكولات البحرية، وطهي الفاصوليا المجففة على نار خفيفة، وإعادة تسخين وطهي الأطباق الحساسة التي تعتمد على البيض.",
     "CL_DV_OV_power_750_desc": "استخدمها لطهي الخضروات الطازجة أو المجمدة.",
     "CL_DV_OV_power_1000_desc": "الأفضل لإعادة تسخين المشروبات والماء والأطباق التي تحتوي على كمية كبيرة من السوائل بسرعة أو طهي الأطباق ذات المحتوى العالي من الماء (الحساء والصلصات وما إلى ذلك).",
-    "CL_DV_OV_microwave_power_levels": "مستويات طاقة الميكروويف"
+    "CL_DV_OV_microwave_power_levels": "مستويات طاقة الميكروويف",
+    "CL_DV_OV_add_steam": "أضف البخار",
+    "CL_DV_OV_add_steam_desc": "اضبط موعد إضافة البخار. يمكنك إضافة ما يصل إلى 3 دورات بخار مخططة.",
+    "CL_DV_OV_24_summer_winter_time_automatic": "الصيف - الشتاء أوتوماتيكي",
+    "CL_DV_OV_start_cycle_at": "ابدأ الدورة عند",
+    "CL_DV_OV_cycle": "دورة",
+    "CL_CF_RM_asko_pro_floor": "أسكو برو",
+    "CL_DV_OV_24_notification_sounds": "أصوات الإشعارات",
+    "CL_DV_OV_24_navigation_sounds": "أصوات الملاحة",
+    "CL_DV_OV_24_on_during_use": "أثناء الاستخدام"
 }
