--- a/language/i18n_de.json
+++ b/language/i18n_de.json
@@ -4208,5 +4208,14 @@
     "CL_DV_OV_power_600_desc": "Geeignet zum Schmelzen von Schokolade, Kochen von Fisch und Meeresfrüchten, Kochen von getrockneten Bohnen bei niedriger Hitze sowie zum Aufwärmen und Kochen von empfindlichen Eierspeisen.",
     "CL_DV_OV_power_750_desc": "Zum Kochen von frischem oder gefrorenem Gemüse verwenden.",
     "CL_DV_OV_power_1000_desc": "Am besten geeignet zum schnellen Aufwärmen von Getränken, Wasser und Gerichten mit viel Flüssigkeit oder zum Zubereiten von Gerichten mit hohem Wassergehalt (Suppen, Soßen usw.).",
-    "CL_DV_OV_microwave_power_levels": "MIKROWELLEN-LEISTUNGSSTUFEN"
+    "CL_DV_OV_microwave_power_levels": "MIKROWELLEN-LEISTUNGSSTUFEN",
+    "CL_DV_OV_add_steam": "Dampf hinzufügen",
+    "CL_DV_OV_add_steam_desc": "Legen Sie fest, wann Dampf hinzugefügt werden soll. Sie können bis zu 3 geplante Dampfzyklen hinzufügen.",
+    "CL_DV_OV_24_summer_winter_time_automatic": "Sommer - Winterzeit Automatik",
+    "CL_DV_OV_start_cycle_at": "Zyklus starten bei",
+    "CL_DV_OV_cycle": "Zyklus",
+    "CL_CF_RM_asko_pro_floor": "ASKO Pro",
+    "CL_DV_OV_24_notification_sounds": "Benachrichtigungstöne",
+    "CL_DV_OV_24_navigation_sounds": "Navigationsgeräusche",
+    "CL_DV_OV_24_on_during_use": "Ein während der Benutzung"
 }
