--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -764,7 +764,7 @@
     "position": "POSITION",
     "expiry_date": "Expiry date",
     "item_photo": "ITEM PHOTO",
-    "send_to_shopping_list": "SEND TO   SHOPPING LIST",
+    "send_to_shopping_list": "SEND TO SHOPPING LIST",
     "hisrf_exit_eco_mode": "Manual temperature adjustment  Exit ECO mode",
     "hisrf_exit_holiday_mode": "Manual temperature adjustment Exit  Holiday mode",
     "hisrf_exit_super_freeze_mode": "Manual temperature adjustment Exit  Super Freeze mode",
@@ -4208,5 +4208,14 @@
     "CL_DV_OV_power_600_desc": "Suitable for melting chocolate, cooking fish and seafood, cooking dried beans at low heat.Reheating and cooking of delicate egg-based dishes.",
     "CL_DV_OV_power_750_desc": "Use for cooking fresh or frozen vegetables.",
     "CL_DV_OV_power_1000_desc": "Best for quickly reheating beverages, water and dishes containing a large volume of liquid or cooking dishes with high water content (soups, sauces etc.).",
-    "CL_DV_OV_microwave_power_levels": "MICROWAVE POWER LEVELS"
+    "CL_DV_OV_microwave_power_levels": "MICROWAVE POWER LEVELS",
+    "CL_DV_OV_add_steam": "Add steam",
+    "CL_DV_OV_add_steam_desc": "Set when steam should be added. You can add up to 3 planned steam cycles.",
+    "CL_DV_OV_24_summer_winter_time_automatic": "Summer - Winter time \u2028Automatic",
+    "CL_DV_OV_start_cycle_at": "Start cycle at",
+    "CL_DV_OV_cycle": "cycle",
+    "CL_CF_RM_asko_pro_floor": "ASKO Pro",
+    "CL_DV_OV_24_notification_sounds": "Notification sounds",
+    "CL_DV_OV_24_navigation_sounds": "Navigation sounds",
+    "CL_DV_OV_24_on_during_use": "On during use"
 }
