--- a/language/i18n_es.json
+++ b/language/i18n_es.json
@@ -4208,5 +4208,14 @@
     "CL_DV_OV_power_600_desc": "Adecuado para derretir chocolate, cocinar pescado y marisco, cocinar judías secas a fuego lento. Recalentar y cocinar platos delicados a base de huevo.",
     "CL_DV_OV_power_750_desc": "Úselo para cocinar verduras frescas o congeladas.",
     "CL_DV_OV_power_1000_desc": "Ideal para recalentar rápidamente bebidas, agua y platos que contengan un gran volumen de líquido o cocinar platos con alto contenido de agua (sopas, salsas, etc.).",
-    "CL_DV_OV_microwave_power_levels": "NIVELES DE POTENCIA DEL MICROONDAS"
+    "CL_DV_OV_microwave_power_levels": "NIVELES DE POTENCIA DEL MICROONDAS",
+    "CL_DV_OV_add_steam": "Añadir vapor",
+    "CL_DV_OV_add_steam_desc": "Establezca cuándo se debe agregar vapor. Puede agregar hasta 3 ciclos de vapor planificados.",
+    "CL_DV_OV_24_summer_winter_time_automatic": "Horario de verano - invierno Automático",
+    "CL_DV_OV_start_cycle_at": "Iniciar ciclo en",
+    "CL_DV_OV_cycle": "ciclo",
+    "CL_CF_RM_asko_pro_floor": "ASKO Pro",
+    "CL_DV_OV_24_notification_sounds": "Sonidos de notificación",
+    "CL_DV_OV_24_navigation_sounds": "Sonidos de navegación",
+    "CL_DV_OV_24_on_during_use": "Encendido durante el uso"
 }
