--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -4208,5 +4208,14 @@
     "CL_DV_OV_power_600_desc": "चॉकलेट पिघलाने, मछली और समुद्री भोजन पकाने, कम गर्मी पर सूखे सेम पकाने के लिए उपयुक्त। नाजुक अंडा आधारित व्यंजनों को गर्म करने और पकाने के लिए उपयुक्त।",
     "CL_DV_OV_power_750_desc": "ताजा या जमी हुई सब्जियां पकाने के लिए उपयोग करें।",
     "CL_DV_OV_power_1000_desc": "पेय पदार्थों, पानी और बड़ी मात्रा में तरल पदार्थ वाले बर्तनों को जल्दी से गर्म करने या उच्च जल सामग्री वाले बर्तनों (सूप, सॉस आदि) को पकाने के लिए सर्वोत्तम।",
-    "CL_DV_OV_microwave_power_levels": "माइक्रोवेव पावर स्तर"
+    "CL_DV_OV_microwave_power_levels": "माइक्रोवेव पावर स्तर",
+    "CL_DV_OV_add_steam": "भाप डालें",
+    "CL_DV_OV_add_steam_desc": "भाप कब डाली जानी चाहिए, यह निर्धारित करें। आप अधिकतम 3 नियोजित भाप चक्र जोड़ सकते हैं।",
+    "CL_DV_OV_24_summer_winter_time_automatic": "ग्रीष्म - शीत ऋतु स्वचालित",
+    "CL_DV_OV_start_cycle_at": "चक्र प्रारंभ करें",
+    "CL_DV_OV_cycle": "चक्र",
+    "CL_CF_RM_asko_pro_floor": "ASKO प्रो",
+    "CL_DV_OV_24_notification_sounds": "अधिसूचना ध्वनियाँ",
+    "CL_DV_OV_24_navigation_sounds": "नेविगेशन ध्वनियाँ",
+    "CL_DV_OV_24_on_during_use": "उपयोग के दौरान चालू"
 }
