--- a/language/i18n_hr.json
+++ b/language/i18n_hr.json
@@ -4208,5 +4208,14 @@
     "CL_DV_OV_power_600_desc": "Prikladno za topljenje čokolade, kuhanje ribe i plodova mora, kuhanje sušenog graha na laganoj vatri. Podgrijavanje i kuhanje delikatnih jela na bazi jaja.",
     "CL_DV_OV_power_750_desc": "Koristite za kuhanje svježeg ili smrznutog povrća.",
     "CL_DV_OV_power_1000_desc": "Najbolje za brzo podgrijavanje napitaka, vode i jela koja sadrže veliku količinu tekućine ili kuhanje jela s visokim udjelom vode (juhe, umaci itd.).",
-    "CL_DV_OV_microwave_power_levels": "RAZINE MIKROVALNE SNAGE"
+    "CL_DV_OV_microwave_power_levels": "RAZINE MIKROVALNE SNAGE",
+    "CL_DV_OV_add_steam": "Dodajte paru",
+    "CL_DV_OV_add_steam_desc": "Podesite kada treba dodati paru. Možete dodati do 3 planirana ciklusa pare.",
+    "CL_DV_OV_24_summer_winter_time_automatic": "Ljeto - Zimsko vrijeme Automatski",
+    "CL_DV_OV_start_cycle_at": "Početak ciklusa u",
+    "CL_DV_OV_cycle": "ciklus",
+    "CL_CF_RM_asko_pro_floor": "ASKO Pro",
+    "CL_DV_OV_24_notification_sounds": "Zvukovi obavijesti",
+    "CL_DV_OV_24_navigation_sounds": "Zvukovi navigacije",
+    "CL_DV_OV_24_on_during_use": "Uključen tijekom uporabe"
 }
