--- a/language/i18n_id.json
+++ b/language/i18n_id.json
@@ -4208,5 +4208,14 @@
     "CL_DV_OV_power_600_desc": "Cocok untuk melelehkan coklat, memasak ikan dan makanan laut, memasak kacang kering dengan api kecil. Memanaskan kembali dan memasak hidangan berbahan dasar telur yang lembut.",
     "CL_DV_OV_power_750_desc": "Digunakan untuk memasak sayuran segar atau beku.",
     "CL_DV_OV_power_1000_desc": "Paling cocok untuk memanaskan kembali minuman, air, dan hidangan yang berisi banyak cairan atau memasak hidangan dengan kandungan air tinggi (sup, saus, dan lain-lain).",
-    "CL_DV_OV_microwave_power_levels": "TINGKAT DAYA MICROWAVE"
+    "CL_DV_OV_microwave_power_levels": "TINGKAT DAYA MICROWAVE",
+    "CL_DV_OV_add_steam": "Tambahkan uap",
+    "CL_DV_OV_add_steam_desc": "Atur kapan uap harus ditambahkan. Anda dapat menambahkan hingga 3 siklus uap yang direncanakan.",
+    "CL_DV_OV_24_summer_winter_time_automatic": "Musim panas - Musim dingin Otomatis",
+    "CL_DV_OV_start_cycle_at": "Mulai siklus di",
+    "CL_DV_OV_cycle": "siklus",
+    "CL_CF_RM_asko_pro_floor": "ASKO Profesional",
+    "CL_DV_OV_24_notification_sounds": "Suara notifikasi",
+    "CL_DV_OV_24_navigation_sounds": "Suara navigasi",
+    "CL_DV_OV_24_on_during_use": "Aktif saat digunakan"
 }
