--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -4208,5 +4208,14 @@
     "CL_DV_OV_power_600_desc": "Погоден за топење чоколада, готвење риба и морски плодови, готвење сушен грав на тивок оган. Повторно загревање и готвење на деликатни јадења на база на јајца.",
     "CL_DV_OV_power_750_desc": "Користете за готвење свеж или замрзнат зеленчук.",
     "CL_DV_OV_power_1000_desc": "Најдобро за брзо загревање на пијалоци, вода и јадења што содржат голем волумен на течност или за готвење јадења со висока содржина на вода (супи, сосови итн.).",
-    "CL_DV_OV_microwave_power_levels": "НИВОА НА МИКРОБРАНОВА МОЌНОСТ"
+    "CL_DV_OV_microwave_power_levels": "НИВОА НА МИКРОБРАНОВА МОЌНОСТ",
+    "CL_DV_OV_add_steam": "Додадете пареа",
+    "CL_DV_OV_add_steam_desc": "Поставете кога треба да се додаде пареа. Можете да додадете до 3 планирани циклуси на пареа.",
+    "CL_DV_OV_24_summer_winter_time_automatic": "Летно - зимско сметање на времето автоматски",
+    "CL_DV_OV_start_cycle_at": "Започнете го циклусот во",
+    "CL_DV_OV_cycle": "циклус",
+    "CL_CF_RM_asko_pro_floor": "АСКО Про",
+    "CL_DV_OV_24_notification_sounds": "Звуци за известување",
+    "CL_DV_OV_24_navigation_sounds": "Звуци за навигација",
+    "CL_DV_OV_24_on_during_use": "Вклучено за време на употребата"
 }
