--- a/language/i18n_sk.json
+++ b/language/i18n_sk.json
@@ -4208,5 +4208,14 @@
     "CL_DV_OV_power_600_desc": "Vhodné na rozpúšťanie čokolády, varenie rýb a morských plodov, varenie sušenej fazule pri nízkej teplote. Ohrievanie a varenie jemných pokrmov na báze vajec.",
     "CL_DV_OV_power_750_desc": "Používa sa na varenie čerstvej alebo mrazenej zeleniny.",
     "CL_DV_OV_power_1000_desc": "Najlepšie na rýchle ohrievanie nápojov, vody a riadu s veľkým objemom tekutín alebo varenie jedál s vysokým obsahom vody (polievky, omáčky atď.).",
-    "CL_DV_OV_microwave_power_levels": "ÚROVNE VÝKONU MIKROVLN"
+    "CL_DV_OV_microwave_power_levels": "ÚROVNE VÝKONU MIKROVLN",
+    "CL_DV_OV_add_steam": "Pridajte paru",
+    "CL_DV_OV_add_steam_desc": "Nastavte, kedy sa má pridať para. Môžete pridať až 3 plánované parné cykly.",
+    "CL_DV_OV_24_summer_winter_time_automatic": "Letný - Zimný čas Automatický",
+    "CL_DV_OV_start_cycle_at": "Začiatok cyklu o",
+    "CL_DV_OV_cycle": "cyklu",
+    "CL_CF_RM_asko_pro_floor": "ASKO Pro",
+    "CL_DV_OV_24_notification_sounds": "Zvuky upozornenia",
+    "CL_DV_OV_24_navigation_sounds": "Zvuky navigácie",
+    "CL_DV_OV_24_on_during_use": "Zapnuté počas používania"
 }
