--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -4208,5 +4208,14 @@
     "CL_DV_OV_power_600_desc": "เหมาะสำหรับการละลายช็อคโกแลต การทำอาหารปลาและอาหารทะเล การต้มถั่วแห้งด้วยไฟอ่อน การอุ่นและปรุงอาหารจานละเอียดอ่อนที่มีส่วนประกอบของไข่",
     "CL_DV_OV_power_750_desc": "ใช้สำหรับประกอบอาหารผักสดหรือแช่แข็ง",
     "CL_DV_OV_power_1000_desc": "เหมาะที่สุดสำหรับการอุ่นเครื่องดื่ม น้ำ และจานที่มีของเหลวปริมาณมากได้อย่างรวดเร็ว หรือปรุงอาหารที่มีปริมาณน้ำสูง (ซุป ซอส เป็นต้น)",
-    "CL_DV_OV_microwave_power_levels": "ระดับพลังงานไมโครเวฟ"
+    "CL_DV_OV_microwave_power_levels": "ระดับพลังงานไมโครเวฟ",
+    "CL_DV_OV_add_steam": "เพิ่มไอน้ำ",
+    "CL_DV_OV_add_steam_desc": "ตั้งเวลาที่จะเติมไอน้ำ คุณสามารถเพิ่มรอบการพ่นไอน้ำที่วางแผนไว้ได้สูงสุด 3 รอบ",
+    "CL_DV_OV_24_summer_winter_time_automatic": "ฤดูร้อน - ฤดูหนาว อัตโนมัติ",
+    "CL_DV_OV_start_cycle_at": "เริ่มรอบที่",
+    "CL_DV_OV_cycle": "วงจร",
+    "CL_CF_RM_asko_pro_floor": "อัสโก โปร",
+    "CL_DV_OV_24_notification_sounds": "เสียงแจ้งเตือน",
+    "CL_DV_OV_24_navigation_sounds": "เสียงนำทาง",
+    "CL_DV_OV_24_on_during_use": "เปิดระหว่างใช้งาน"
 }
