--- a/language/i18n_tr.json
+++ b/language/i18n_tr.json
@@ -4208,5 +4208,14 @@
     "CL_DV_OV_power_600_desc": "Çikolata eritmek, balık ve deniz ürünlerini pişirmek, kuru fasulyeyi kısık ateşte pişirmek için uygundur. Hassas yumurtalı yemeklerin ısıtılması ve pişirilmesinde kullanılır.",
     "CL_DV_OV_power_750_desc": "Taze veya dondurulmuş sebzeleri pişirmek için kullanılır.",
     "CL_DV_OV_power_1000_desc": "İçecekleri, suyu ve çok miktarda sıvı içeren yemekleri hızlı bir şekilde ısıtmak veya su içeriği yüksek yemekleri (çorbalar, soslar vb.) pişirmek için idealdir.",
-    "CL_DV_OV_microwave_power_levels": "MİKRODALGA GÜÇ SEVİYELERİ"
+    "CL_DV_OV_microwave_power_levels": "MİKRODALGA GÜÇ SEVİYELERİ",
+    "CL_DV_OV_add_steam": "Buhar ekle",
+    "CL_DV_OV_add_steam_desc": "Buharın ne zaman ekleneceğini ayarlayın. 3'e kadar planlanmış buhar döngüsü ekleyebilirsiniz.",
+    "CL_DV_OV_24_summer_winter_time_automatic": "Yaz - Kış saati Otomatik",
+    "CL_DV_OV_start_cycle_at": "Döngüyü şurada başlat:",
+    "CL_DV_OV_cycle": "döngü",
+    "CL_CF_RM_asko_pro_floor": "ASKO Pro",
+    "CL_DV_OV_24_notification_sounds": "Bildirim sesleri",
+    "CL_DV_OV_24_navigation_sounds": "Navigasyon sesleri",
+    "CL_DV_OV_24_on_during_use": "Kullanım sırasında açık"
 }
