--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Besked lyder",
     "CL_DV_OV_24_navigation_sounds": "Navigationslyde",
-    "CL_DV_OV_24_on_during_use": "Tændt under brug"
+    "CL_DV_OV_24_on_during_use": "Tændt under brug",
+    "tips_key": "Tips"
 }
