--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "ASKO प्रो",
     "CL_DV_OV_24_notification_sounds": "अधिसूचना ध्वनियाँ",
     "CL_DV_OV_24_navigation_sounds": "नेविगेशन ध्वनियाँ",
-    "CL_DV_OV_24_on_during_use": "उपयोग के दौरान चालू"
+    "CL_DV_OV_24_on_during_use": "उपयोग के दौरान चालू",
+    "tips_key": "सुझावों"
 }
