--- a/language/i18n_hu.json
+++ b/language/i18n_hu.json
@@ -4198,24 +4198,25 @@
     "light_switch_content_msg": "A világításkapcsoló lehetővé teszi a készülék világításának gyors be- és kikapcsolását. A kapcsoló felülírja a többi világítási módot.",
     "lights_on_for_msg": "Állítsa be, hogy a világításkapcsoló lámpái mennyi ideig maradjanak bekapcsolva. A „Lights On For” (Lights On For) beállításban beállított időtartam letelte után a készülék visszatér a korábbi világítási módokhoz.",
     "ambient_mode_msg": "Az Ambient mód beleolvad a lakótér hangulatába. Az ajtó becsukásakor aktiválódik.",
-    "three_standby": "Állítsa be, hogy az „Óra képernyő” után hány percnyi művelet után a szekrény kijelzője készenléti állapotba kerül.",
-    "delete_account_tips": "Ha minden adatát töröljük rendszerünkből, e-mailt kap.",
-    "CL_DV_RF_water_inlet_tube_sensor": "Vízbemeneti cső érzékelő",
+    "three_standby": "Állítsa be, hogy az „Óra képernyő” után hány percnyi tétlenséget követően kapcsoljon a képernyő készenléti módba.",
+    "delete_account_tips": "E-mailben értesítjük Önt, amint minden adatát töröltük rendszerünkből.",
+    "CL_DV_RF_water_inlet_tube_sensor": "Vízvételi befolyócső érzékelő",
     "CL_DV_OV_set_power_watts": "TELJESÍTMÉNY BEÁLLÍTÁSA (WATTS)",
     "CL_DV_OV_power_90_desc": "Krémmel töltött tészta kiolvasztása.",
     "CL_DV_OV_power_180_desc": "A vaj vagy fagylalt kézi kiolvasztása és lágyítása.",
     "CL_DV_OV_power_360_desc": "Tejtermékek vagy lekvárok főzése alacsony hőfokon.",
-    "CL_DV_OV_power_600_desc": "Alkalmas csokoládé olvasztására, hal és tenger gyümölcsei főzésére, szárított bab főzésére alacsony hőfokon. Finom tojás alapú ételek melegítése és főzése.",
+    "CL_DV_OV_power_600_desc": "Alkalmas csokoládé olvasztására, hal és tenger gyümölcsei- vagy szárított bab főzésére alacsony hőfokon. Ízletes tojásalapú ételek felmelegíztésére és főzésére. ",
     "CL_DV_OV_power_750_desc": "Friss vagy fagyasztott zöldségek főzésére használható.",
     "CL_DV_OV_power_1000_desc": "Legjobb italok, víz és nagy mennyiségű folyadékot tartalmazó ételek gyors felmelegítésére vagy magas víztartalmú ételek (levesek, szószok stb.) főzésére.",
     "CL_DV_OV_microwave_power_levels": "MIKROHULLÁMÚ TELJESÍTMÉNYSZINT",
     "CL_DV_OV_add_steam": "Adjunk hozzá gőzt",
-    "CL_DV_OV_add_steam_desc": "Állítsa be, hogy mikor kell hozzáadni a gőzt. Legfeljebb 3 tervezett gőzölési ciklust adhat hozzá.",
+    "CL_DV_OV_add_steam_desc": "Állítsa be, hogy mikor legyen a gőz a ciklushoz adva. Legfeljebb 3 tervezett gőzölési ciklust adhat hozzá.",
     "CL_DV_OV_24_summer_winter_time_automatic": "Nyári - Téli időszámítás Automatikus",
     "CL_DV_OV_start_cycle_at": "Indítsa el a ciklust a",
     "CL_DV_OV_cycle": "ciklus",
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Értesítési hangok",
     "CL_DV_OV_24_navigation_sounds": "Navigációs hangok",
-    "CL_DV_OV_24_on_during_use": "Használat közben bekapcsolva"
+    "CL_DV_OV_24_on_during_use": "Bekapcsolás használat közben",
+    "tips_key": "Tippek"
 }
