--- a/language/i18n_pt.json
+++ b/language/i18n_pt.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Sons de notificação",
     "CL_DV_OV_24_navigation_sounds": "Sons de navegação",
-    "CL_DV_OV_24_on_during_use": "Ligado durante o uso"
+    "CL_DV_OV_24_on_during_use": "Ligado durante o uso",
+    "tips_key": "Pontas"
 }
