--- a/language/i18n_zh-TW.json
+++ b/language/i18n_zh-TW.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "ASKO專業版",
     "CL_DV_OV_24_notification_sounds": "通知聲音",
     "CL_DV_OV_24_navigation_sounds": "導航聲音",
-    "CL_DV_OV_24_on_during_use": "使用期間開啟"
+    "CL_DV_OV_24_on_during_use": "使用期間開啟",
+    "tips_key": "尖端"
 }
