--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "أسكو برو",
     "CL_DV_OV_24_notification_sounds": "أصوات الإشعارات",
     "CL_DV_OV_24_navigation_sounds": "أصوات الملاحة",
-    "CL_DV_OV_24_on_during_use": "أثناء الاستخدام"
+    "CL_DV_OV_24_on_during_use": "أثناء الاستخدام",
+    "tips_key": "نصائح"
 }
