--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Звуци за известяване",
     "CL_DV_OV_24_navigation_sounds": "Звуци на навигация",
-    "CL_DV_OV_24_on_during_use": "Включен по време на употреба"
+    "CL_DV_OV_24_on_during_use": "Включен по време на употреба",
+    "tips_key": "Съвети"
 }
