--- a/language/i18n_cs.json
+++ b/language/i18n_cs.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Zvuky upozornění",
     "CL_DV_OV_24_navigation_sounds": "Zvuky navigace",
-    "CL_DV_OV_24_on_during_use": "Zapnuto během používání"
+    "CL_DV_OV_24_on_during_use": "Zapnuto během používání",
+    "tips_key": "Tipy"
 }
