--- a/language/i18n_de.json
+++ b/language/i18n_de.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Benachrichtigungstöne",
     "CL_DV_OV_24_navigation_sounds": "Navigationsgeräusche",
-    "CL_DV_OV_24_on_during_use": "Ein während der Benutzung"
+    "CL_DV_OV_24_on_during_use": "Ein während der Benutzung",
+    "tips_key": "Tipps"
 }
