--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Notification sounds",
     "CL_DV_OV_24_navigation_sounds": "Navigation sounds",
-    "CL_DV_OV_24_on_during_use": "On during use"
+    "CL_DV_OV_24_on_during_use": "On during use",
+    "tips_key": "Tips"
 }
