--- a/language/i18n_es.json
+++ b/language/i18n_es.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Sonidos de notificación",
     "CL_DV_OV_24_navigation_sounds": "Sonidos de navegación",
-    "CL_DV_OV_24_on_during_use": "Encendido durante el uso"
+    "CL_DV_OV_24_on_during_use": "Encendido durante el uso",
+    "tips_key": "Consejos"
 }
