--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "صداهای اعلان",
     "CL_DV_OV_24_navigation_sounds": "صداهای ناوبری",
-    "CL_DV_OV_24_on_during_use": "در حین استفاده روشن است"
+    "CL_DV_OV_24_on_during_use": "در حین استفاده روشن است",
+    "tips_key": "نکات"
 }
