--- a/language/i18n_fi.json
+++ b/language/i18n_fi.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Ilmoitusäänet",
     "CL_DV_OV_24_navigation_sounds": "Navigointiäänet",
-    "CL_DV_OV_24_on_during_use": "Käytössä käytössä"
+    "CL_DV_OV_24_on_during_use": "Käytössä käytössä",
+    "tips_key": "Vinkkejä"
 }
