--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Sons de notification",
     "CL_DV_OV_24_navigation_sounds": "Sons de navigation",
-    "CL_DV_OV_24_on_during_use": "Allumé pendant l'utilisation"
+    "CL_DV_OV_24_on_during_use": "Allumé pendant l'utilisation",
+    "tips_key": "Conseils"
 }
