--- a/language/i18n_hr.json
+++ b/language/i18n_hr.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Zvukovi obavijesti",
     "CL_DV_OV_24_navigation_sounds": "Zvukovi navigacije",
-    "CL_DV_OV_24_on_during_use": "Uključen tijekom uporabe"
+    "CL_DV_OV_24_on_during_use": "Uključen tijekom uporabe",
+    "tips_key": "Savjeti"
 }
