--- a/language/i18n_id.json
+++ b/language/i18n_id.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Profesional",
     "CL_DV_OV_24_notification_sounds": "Suara notifikasi",
     "CL_DV_OV_24_navigation_sounds": "Suara navigasi",
-    "CL_DV_OV_24_on_during_use": "Aktif saat digunakan"
+    "CL_DV_OV_24_on_during_use": "Aktif saat digunakan",
+    "tips_key": "Kiat-kiat"
 }
