--- a/language/i18n_it.json
+++ b/language/i18n_it.json
@@ -3107,30 +3107,30 @@
     "time_long_short": "Tempo: Lungo - Corto",
     "time_short_long": "Tempo: Corto - Lungo",
     "starts_key": "Inizia",
-    "ends_key": "Fini",
-    "delete_floor_key": "Eliminare il pavimento?",
+    "ends_key": "Fine",
+    "delete_floor_key": "Eliminare il piano?",
     "temperature_guide_content": "Le giuste temperature per conservare, servire e invecchiare i vini possono variare a seconda del tipo di vino e delle preferenze personali. Ecco alcune linee guida generali sulla temperatura.",
     "light_white": "chiaro\nbianco",
     "medium_white": "Medio\nbianco",
     "full_white": "completamente\nbianco",
-    "light_red": "luce\nrossa",
+    "light_red": "chiaro\nrosso",
     "medium_red": "medio\nrosso",
     "full_red": "pieno\nrosso",
     "sparkling_left": "Cava\nChampagne\nChampagne d'annata\nAsti Spumante\nProsecco",
     "lightWhite_left": "Albarino\nAmeis\nSauvignon Blanc\nFalanghina\nGavi Di Gavi\nGruner Veltliner\nPicpoul De Pinet",
     "mediumWhite_left": "Assyrtiko\nBacco\nCatarratto\nFiano\nInzolia\nGodello\nGarganega\nGreco Di Tufo\nGewürtztraminer",
-    "fullWhite_left": "Furmint\nGrenache bianco\nOrtega\nMacabeo\nPouilly-Fuissé\nPalomino\nPedro Ximenez\nRoussanne",
-    "dessert_left": "Vino ghiacciato\nMoscato\nSauternes",
+    "fullWhite_left": "Furmint\nGrenache Blanc\nOrtega\nMacabeo\nPouilly-Fuissé\nPalomino\nPedro Ximenez\nRoussanne",
+    "dessert_left": "Vino di ghiaccio\nMoscato\nSauternes",
     "rose_left": "Côtes De Provence\nPinot Grigio Rosé\nRioja Rosado\nSancerre Rosé\nZinfandel bianco",
     "lightRed_left": "Beaujolais\nBeaune\nPinot Nero\nValpolicella\nBarbera\nBonardo",
     "mediumRed_left": "Barolo\nBorgogna\nCôtes Du Rhône\nChianti\nMerlot\nNerello Mascalese",
     "fullRed_left": "Bordeaux\nCabernet\nSauvignon\nGrenache\nMalbec\nRioja\nSyrah\nShiraz\nAglianico\nCarmenere",
-    "lightWhite_right": "San Bris\nVerdicchio\nFrascati\nPinot Grigio\nPSanto. Bris\nVerdicchio\nFrascati\nPinot Grigio\nPouilly-Fumé\nSancerre\nCorteseouilly-Fumé\nSancerre\nCortese",
-    "mediumWhite_right": "Orvieto\nChenin Blanc\nColombard\nPinot Blanco\nReisling\nSoave\nVerdejo\nViognier",
-    "fullWhite_right": "Torrontes\nTrebbiano\nVermentino\nBorgogna\nChablis\nChardonnay\nMersault\nSémillon",
-    "lightRed_right": "Frapatto\nGamay\nMontepulciano\nNero D'Avola\nPinot Meunier",
-    "mediumRed_right": "Vino ghiacciato\nMoscato\nSauternes",
-    "fullRed_right": "Garignan\nGraciano\nMourvedre\nNegroamaro\nPetit Verdot\nTannat\nTempranillo\nTouriga National\nZinfandel",
+    "lightWhite_right": "San Bris\nVerdicchio\nFrascati\nPinot grigio\nPouilly-Fumé\nSancerre\nCortese",
+    "mediumWhite_right": "Orvieto\nChenin Blanc\nColombard\nPinot bianco\nReisling\nSoave\nVerdejo\nViognier",
+    "fullWhite_right": "Torronte\nTrebbiano\nVermentino\nBorgogna\nChablis\nChardonnay\nMersault\nSémillon",
+    "lightRed_right": "Frapatto\nGamay\nMontepulciano\nNero d'Avola\nPinot Meunier",
+    "mediumRed_right": "Sangiovese\nBrunello\nCorvina\nDolcetto\nNebbiolo",
+    "fullRed_right": "Garignano\nGraciano\nMourvedre\nNegroamaro\nPetit Verdot\nTannat\nTempranillo\nTouriga Nacional\nZinfandel",
     "lightWhite_title": "Vino bianco leggero",
     "mediumWhite_title": "Bianco di medio corpo",
     "fullWhite_title": "Bianco Corposo",
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Suoni di notifica",
     "CL_DV_OV_24_navigation_sounds": "Suoni di navigazione",
-    "CL_DV_OV_24_on_during_use": "Acceso durante l'uso"
+    "CL_DV_OV_24_on_during_use": "Acceso durante l'uso",
+    "tips_key": "Suggerimenti"
 }
