--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Хабарландыру дыбыстары",
     "CL_DV_OV_24_navigation_sounds": "Навигация дыбыстары",
-    "CL_DV_OV_24_on_during_use": "Қолдану кезінде қосулы"
+    "CL_DV_OV_24_on_during_use": "Қолдану кезінде қосулы",
+    "tips_key": "Кеңестер"
 }
