--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "아스코 프로",
     "CL_DV_OV_24_notification_sounds": "알림음",
     "CL_DV_OV_24_navigation_sounds": "항해 소리",
-    "CL_DV_OV_24_on_during_use": "사용 중 켜짐"
+    "CL_DV_OV_24_on_during_use": "사용 중 켜짐",
+    "tips_key": "팁"
 }
