--- a/language/i18n_mk.json
+++ b/language/i18n_mk.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "АСКО Про",
     "CL_DV_OV_24_notification_sounds": "Звуци за известување",
     "CL_DV_OV_24_navigation_sounds": "Звуци за навигација",
-    "CL_DV_OV_24_on_during_use": "Вклучено за време на употребата"
+    "CL_DV_OV_24_on_during_use": "Вклучено за време на употребата",
+    "tips_key": "Совети"
 }
