--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Bunyi pemberitahuan",
     "CL_DV_OV_24_navigation_sounds": "Bunyi navigasi",
-    "CL_DV_OV_24_on_during_use": "Hidup semasa digunakan"
+    "CL_DV_OV_24_on_during_use": "Hidup semasa digunakan",
+    "tips_key": "Petua"
 }
