--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "ASKO-Pro",
     "CL_DV_OV_24_notification_sounds": "Meldingsgeluiden",
     "CL_DV_OV_24_navigation_sounds": "Navigatiegeluiden",
-    "CL_DV_OV_24_on_during_use": "Aan tijdens gebruik"
+    "CL_DV_OV_24_on_during_use": "Aan tijdens gebruik",
+    "tips_key": "Tips"
 }
