--- a/language/i18n_pl.json
+++ b/language/i18n_pl.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Dźwięki powiadomień",
     "CL_DV_OV_24_navigation_sounds": "Dźwięki nawigacyjne",
-    "CL_DV_OV_24_on_during_use": "Włączone podczas użytkowania"
+    "CL_DV_OV_24_on_during_use": "Włączone podczas użytkowania",
+    "tips_key": "Porady"
 }
