--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "АСКО Про",
     "CL_DV_OV_24_notification_sounds": "Звуки уведомлений",
     "CL_DV_OV_24_navigation_sounds": "Звуки навигации",
-    "CL_DV_OV_24_on_during_use": "Включено во время использования"
+    "CL_DV_OV_24_on_during_use": "Включено во время использования",
+    "tips_key": "Советы"
 }
