--- a/language/i18n_sk.json
+++ b/language/i18n_sk.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Zvuky upozornenia",
     "CL_DV_OV_24_navigation_sounds": "Zvuky navigácie",
-    "CL_DV_OV_24_on_during_use": "Zapnuté počas používania"
+    "CL_DV_OV_24_on_during_use": "Zapnuté počas používania",
+    "tips_key": "Tipy"
 }
