--- a/language/i18n_sr-BA.json
+++ b/language/i18n_sr-BA.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "АСКО Про",
     "CL_DV_OV_24_notification_sounds": "Звукови обавештења",
     "CL_DV_OV_24_navigation_sounds": "Звукови навигације",
-    "CL_DV_OV_24_on_during_use": "Укључено током употребе"
+    "CL_DV_OV_24_on_during_use": "Укључено током употребе",
+    "tips_key": "Савети"
 }
