--- a/language/i18n_sv.json
+++ b/language/i18n_sv.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Aviseringsljud",
     "CL_DV_OV_24_navigation_sounds": "Navigationsljud",
-    "CL_DV_OV_24_on_during_use": "På under användning"
+    "CL_DV_OV_24_on_during_use": "På under användning",
+    "tips_key": "Tips"
 }
