--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "อัสโก โปร",
     "CL_DV_OV_24_notification_sounds": "เสียงแจ้งเตือน",
     "CL_DV_OV_24_navigation_sounds": "เสียงนำทาง",
-    "CL_DV_OV_24_on_during_use": "เปิดระหว่างใช้งาน"
+    "CL_DV_OV_24_on_during_use": "เปิดระหว่างใช้งาน",
+    "tips_key": "เคล็ดลับ"
 }
