--- a/language/i18n_tr.json
+++ b/language/i18n_tr.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Bildirim sesleri",
     "CL_DV_OV_24_navigation_sounds": "Navigasyon sesleri",
-    "CL_DV_OV_24_on_during_use": "Kullanım sırasında açık"
+    "CL_DV_OV_24_on_during_use": "Kullanım sırasında açık",
+    "tips_key": "İpuçları"
 }
