--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Pro",
     "CL_DV_OV_24_notification_sounds": "Звуки сповіщень",
     "CL_DV_OV_24_navigation_sounds": "Звуки навігації",
-    "CL_DV_OV_24_on_during_use": "Увімкнено під час використання"
+    "CL_DV_OV_24_on_during_use": "Увімкнено під час використання",
+    "tips_key": "Поради"
 }
