--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "ASKO Chuyên nghiệp",
     "CL_DV_OV_24_notification_sounds": "Âm thanh thông báo",
     "CL_DV_OV_24_navigation_sounds": "Âm thanh dẫn đường",
-    "CL_DV_OV_24_on_during_use": "Bật trong khi sử dụng"
+    "CL_DV_OV_24_on_during_use": "Bật trong khi sử dụng",
+    "tips_key": "Mẹo"
 }
