--- a/language/i18n_zh.json
+++ b/language/i18n_zh.json
@@ -4217,5 +4217,6 @@
     "CL_CF_RM_asko_pro_floor": "ASKO 专业版",
     "CL_DV_OV_24_notification_sounds": "通知声音",
     "CL_DV_OV_24_navigation_sounds": "导航声音",
-    "CL_DV_OV_24_on_during_use": "使用期间开启"
+    "CL_DV_OV_24_on_during_use": "使用期间开启",
+    "tips_key": "尖端"
 }
